FIxed button size on mobile view

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ h4#location{
     }
 
     button{
-        height: 45px;
+        height: 40px;
         margin: 7px 0;
     }
 }
